--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <link rel="shortcut icon" href="./assets/hamburguer.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -28,10 +28,10 @@
               <div class="line3"></div>
             </div>
             <ul class="nav-list">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Cardapio</a></li>
-              <li><a href="#">Sobre nós</a></li>
-              <li><a href="#">Contato</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#menu">Cardapio</a></li>
+              <li><a href="#sobrenos">Sobre nós</a></li>
+              <li><a href="#contatos">Contato</a></li>
             </ul>
           </nav>
 </header>
@@ -52,9 +52,12 @@
     </div>
 
     <h2 class="text-2xl md:text-3xl font-bold text-center mt-9 mb-6"> Conheça nosso menu</h2>
-
+    <br>
     <!-- inicio menu -->
     <div id="menu">
+        <div class="mx-auto max-w-7xl px-2 my-2">
+            <h2 class="font-bold text-3xl">Hamburguer's</h2>
+        </div>
         <main class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16">
             <!-- produto 1 -->
             <div class="flex gap-2">
@@ -113,6 +116,37 @@
                 </div>
             </div>
         </main>
+
+        <div class="mx-auto max-w-7xl px-2 my-2">
+            <h2 class="font-bold text-3xl">Porções</h2>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16" id="menu">
+            <div class="flex gap-2 w-full">
+                <img src="./assets/onion.png" alt="Onion" class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
+                <div class="w-full">
+                    <p class="font-bold">Anel de Cebola</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$10.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Anel de Cebola" data-price="10.00">
+                            <i class="fa fa-cart-plus text-lg text-white"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        <!-- Doce 2 -->
+        <div class="flex gap-2 w-full">
+            <img src="./assets/bttf.png" alt="batata frita" class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
+            <div class="w-full">
+                <p class="font-bold">Batata Frita</p>
+                <div class="flex items-center gap-2 justify-between mt-3">
+                    <p class="font-bold text-lg">R$10.00</p>
+                    <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Batata Frita" data-price="10.00">
+                        <i class="fa fa-cart-plus text-lg text-white"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+        </div>
 
         <div class="mx-auto max-w-7xl px-2 my-2">
             <h2 class="font-bold text-3xl">Bebidas</h2>
