--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
     </button>
 </footer>
 
+<script src="mobile-navbar.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="script.js"></script>
 
