--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
                         <p class="font-bold mt-4">Endereço de entrega:</p>
                         <input type="text" placeholder="CEP" id="cep" class="input w-full border-2 p-1 rounded my-1"/>
                         <input type="text" placeholder="Endereço" id="address" class="input w-full border-2 p-1 rounded my-1"/>
+                        <input type="text" placeholder="Número" id="numero" class="input w-full border-2 p-1 rounded my-1"/>
                         <input type="text" placeholder="Bairro" id="bairro" class="input w-full border-2 p-1 rounded my-1"/>
                         <input type="text" placeholder="Cidade" id="cidade" class="input w-full border-2 p-1 rounded my-1"/>
                         <p class="text-red-500 hidden" id="address-warn">Digite seu endereço completo!</p>
